--- a/responsive-ecommerce-website-master/index.html
+++ b/responsive-ecommerce-website-master/index.html
@@ -116,6 +116,139 @@
                 </div>
             </div>
         </section>
+        <seciton class="offer section">
+            <div class="offer_bg">
+                <div class="offer_data">
+                    <h2 class="offer_title">Special Offer</h2>
+                    <p class="offer_description">Special offers discounts for women this week only</p>
+                    <a href="" class="button">SHOP Now</a>
+                </div>
+            </div>
+        </seciton>
+
+        <section class="new section" id="new">
+            <h2 class="section-title">
+                New Arrivals
+            </h2>
+            <a href="" class="section-all">View All</a>
+
+            <div class="new_container bd-grid">
+                <div class="new_box">
+                    <img src="assets/img/new1.png" alt="" class="new_img">
+                    <div class="new_link">
+                        <a href="#" class="button">View Product</a>
+                    </div>
+                </div>
+                
+                <div class="new_box">
+                    <img src="assets/img/new2.png" alt="" class="new_img">
+                    <div class="new_link">
+                        <a href="#" class="button">View Product</a>
+                    </div>
+                </div>
+
+                <div class="new_box">
+                    <img src="assets/img/new3.png" alt="" class="new_img">
+                    <div class="new_link">
+                        <a href="#" class="button">View Product</a>
+                    </div>
+                </div>
+
+                <div class="new_box">
+                    <img src="assets/img/new4.png" alt="" class="new_img">
+                    <div class="new_link">
+                        <a href="#" class="button">View Product</a>
+                    </div>
+                </div>
+
+                <div class="new_box">
+                    <img src="assets/img/new5.png" alt="" class="new_img">
+                    <div class="new_link">
+                        <a href="#" class="button">View Product</a>
+                    </div>
+                </div>
+
+                <div class="new_box">
+                    <img src="assets/img/new1.png" alt="" class="new_img">
+                    <div class="new_link">
+                        <a href="#" class="button">View Product</a>
+                    </div>
+                </div>
+
+                <div class="new_box">
+                    <img src="assets/img/new6.png" alt="" class="new_img">
+                    <div class="new_link">
+                        <a href="#" class="button">View Product</a>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <section class="newletter section" id="subscribed">
+            <div class="newsletter_container bd-grid">
+                <div class="newsletter_subscribe">
+                    <h2 class="section-title">Our newsltter</h2>
+                    <p class="newsletter_description">Promotion enw product and sales.Directly to your</p>
+                    <form action="" class="newsletter_form">
+                        <input type="text" class="newsletter_input" placeholder="enter your email">
+                        <a href="" class="button">Subsribe</a>
+                    </form>
+                </div>
+            </div>
+        </section>
+
+        <section class="sponsors section">
+            <div class="sponsors_container bd-grid">
+                <div class="sponsors_logo">
+                    <img src="assets/img/logo1.png" alt="">
+                </div>
+                <div class="sponsors_logo">
+                    <img src="assets/img/logo2.png" alt="">
+                </div>
+                <div class="sponsors_logo">
+                    <img src="assets/img/logo3.png" alt="">
+                </div>
+                <div class="sponsors_logo">
+                    <img src="assets/img/logo4.png" alt="">
+                </div>
+            </div>
+        </section>
+        <footer class="footer section">
+            <div class="footer_container bd-grid">
+                <div class="footer_box">
+                    <h3 class="footer_title">SARA</h3>
+                    <p class="footer_deal">Products store</p>
+                    <a href="#"><img src="assets/img/footerstore1.png" alt="" class="footer_store"></a>
+                    <a href="#"><img src="assets/img/footerstore2.png" alt="" class="footer_store"></a>
+                </div>
+
+                <div class="footer_box">
+                    <h3 class="footer_title">explore</h3>
+                    <ul>
+                        <li><a href="#" class="footer_link">Home</a></li>
+                        <li><a href="#" class="footer_link">Featured</a></li>
+                        <li><a href="#" class="footer_link">New</a></li>
+                        <li><a href="#" class="footer_link">Subscribe</a></li>
+                    </ul>
+                </div>
+                <div class="footer_box">
+                    <h3 class="footer_title">Our services</h3>
+                    <ul>
+                        <li><a href="#" class="footer_link">pricing</a></li>
+                        <li><a href="#" class="footer_link">Free shipping</a></li>
+                        <li><a href="#" class="footer_link">Gift card</a></li>
+                    </ul>
+                </div>
+                <div class="footer_box">
+                    <h3 class="footer_title">Follow</h3>
+                    <a href="#" class="footer_social"><i class="bx bxl-facebook-square"></i></a>
+                    <a href="#" class="footer_social"><i class="bx bxl-instagram-alt"></i></a>
+                    <a href="#" class="footer_social"><i class="bx bxl-twitter"></i></a>
+                </div>
+            </div>
+
+            <p class="footer_copy">&#169; 2020 copyright all right reserved</p>
+        </footer>
     </main>
 
     <script src="assets/js/main.js"></script>
